# TheFork

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/res/values/: strings.xml
Assets/FSL/HelloTriangle/: basic.vert.fsl  resources.h.fsl
Assets/FSL/binary/ANDROID_VULKAN/: fontstash.frag  fontstash.frag_0.spv  fontstash2D.vert_0.spv  fontstash3D.vert_0.spv  imgui.vert_0.spv  imgui_SAMPLE_COUNT_1.frag  imgui_SAMPLE_COUNT_16.frag  imgui_SAMPLE_COUNT_16.frag_0.spv  imgui_SAMPLE_COUNT_2.frag  imgui_SAMPLE_COUNT_2.frag_0.spv  imgui_SAMPLE_COUNT_4.frag_0.spv  imgui_SAMPLE_COUNT_8.frag  imgui_SAMPLE_COUNT_8.frag_0.spv
Assets/FSL/binary/DIRECT3D12/: DrawQuad.vert  DrawQuad.vert_0.dxil  HelloTriangle.frag  HelloTriangle.frag_0.dxil  HelloTriangle.vert  HelloTriangle.vert_0.dxil  fontstash.frag  fontstash.frag_0.dxil  fontstash2D.vert  fontstash2D.vert_0.dxil  fontstash3D.vert  fontstash3D.vert_0.dxil  imgui.vert  imgui.vert_0.dxil  imgui_SAMPLE_COUNT_1.frag  imgui_SAMPLE_COUNT_1.frag_0.dxil  imgui_SAMPLE_COUNT_16.frag  imgui_SAMPLE_COUNT_16.frag_0.dxil  imgui_SAMPLE_COUNT_2.frag  imgui_SAMPLE_COUNT_2.frag_0.dxil  imgui_SAMPLE_COUNT_4.frag  imgui_SAMPLE_COUNT_4.frag_0.dxil  imgui_SAMPLE_COUNT_8.frag  imgui_SAMPLE_COUNT_8.frag_0.dxil
Assets/FSL/binary/HelloTriangle/DIRECT3D12/: basic.frag_0.dxil  basic.vert  basic.vert_0.dxil
Assets/FSL/binary/HelloTriangle/VULKAN/: basic.vert
Assets/FSL/binary/VULKAN/: DrawQuad.vert  DrawQuad.vert_0.spv  HelloTriangle.frag  HelloTriangle.frag_0.spv  HelloTriangle.vert  HelloTriangle.vert_0.spv  fontstash2D.vert  fontstash3D.vert  imgui.vert  imgui_SAMPLE_COUNT_1.frag_0.spv  imgui_SAMPLE_COUNT_4.frag
Assets/GPUCfg/: gpu.data
Scripts/: build_shaders.py  build_shaders_android.bat  build_shaders_mac.command  build_shaders_win.bat  build_shaders_win_debug.bat  buld_shaders_win.bat
Source/: Main.cpp  Sample.appxManifest
Source/FSL/FlappyClone/: DrawQuad.h.fsl  DrawQuad.vert.fsl  ShaderList.fsl
Source/FSL/HelloTriangle/: HelloTriangle.h.fsl  HelloTriangle.vert.fsl  ShaderList.fsl  basic.vert.fsl
Source/FSL/Imgui/: ShaderList.fsl  imgui.frag.fsl
Source/Modules/: Engine.cpp  Engine.h  LifeCycledModule.h  RHI.cpp  RHI.h  Window.cpp  Window.h
Source/Modules/High/AppModuleLauncher/: AppModuleLauncher.cpp  AppModuleLauncher.h  Launcher.cpp  Launcher.h
Source/Modules/High/FlappyClone/: FlappyClone.cpp  FlappyClone.h  README.md
Source/Modules/High/HelloTriangle/: HelloTriangle.cpp  HelloTriangle.h  README.md
Source/Modules/Low/: Engine.cpp  Engine.h  Inputs.cpp  Inputs.h  RHI.cpp  RHI.h  Window.cpp  Window.h
Source/Modules/Medium/: FontRendering.cpp  FontRendering.h
Source/Modules/Medium/Imgui/: UI.cpp  UI.h  imconfig.h  imgui_impl_sdl3.cpp  imgui_impl_theforge.cpp  imgui_impl_theforge.h
Source/Modules/Middle/: Camera.cpp  Camera.h
config/: README.md
